maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:6: error: ';' expected but 'else' found.
    } else {
      ^